[project]
name = "ice-cream-dataops"
version = "0.1.0"
description = ""
authors = [
    {name = "chforre",email = "cole.forrest1@ipaper.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "cognite-toolkit (==0.6.53)",
    "tree (>=0.2.4,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
